[project]
name = "eml2iso19139"
version = "0.1"
description = "Convert EML metadata to ISO-19139 via XSLT"
authors = [
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
dependencies = [
    "lxml>=4.9.2",
    "fire>=0.5.0",
]
requires-python = ">=3.10"
license = {text = "GPLv3"}

[tool]
[tool.pdm]
[tool.black]
[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.ruff]
fix = true
ignore = ["E501"]
